# kilo

./: CMakeLists.txt
.github/workflows/: ci.yml  format-check.yml  test.yml
scripts/: build.sh  test.sh
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  main.cc
